[package]
name = "uni-app"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>", "jice <jice.nospam@gmail.com>"]
description = "native/wasm compatibility layer for window creation, input and filesystem"
license = "MIT"
documentation = "https://docs.rs/uni-app"
repository = "https://github.com/unrust/uni-app"
keywords = ["windowing", "input", "filesystem", "wasm"]

[dependencies]

[target.wasm32-unknown-unknown.dependencies]
stdweb =  "0.4.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.17.0"
time = "0.1.39"

