[package]
name = "uni-app"
version = "0.2.1"
authors = [
    "Edwin Cheng <edwin0cheng@gmail.com>",
    "jice <jice.nospam@gmail.com>"
]
description = "native/wasm compatibility layer for window creation, input and filesystem"
license = "MIT"
documentation = "https://docs.rs/uni-app"
repository = "https://github.com/unrust/uni-app"
keywords = ["windowing", "input", "filesystem", "wasm"]
edition = "2021"
exclude = ["www/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
    "HtmlCanvasElement",
    "Document",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "DragEvent",
    "ProgressEvent",
    "EventTarget",
    "DataTransfer",
    "File",
    "FileReader",
    "FileList",
    "DomRect",
    "Window",
    "Performance",
    "Location",
    "console",
    "Element",
    "CssStyleDeclaration",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.29.1"
time = "0.1.44"
# fix for missing features in rust 2021 (https://doc.rust-lang.org/nightly/edition-guide/rust-2021/default-cargo-resolver.html)
winapi = { version = "0.3.9", features = [
    "winerror",
    "winbase",
    "errhandlingapi"
] }
