[package]
name = "uni-app-example"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/unrust/uni-app"
description = "uni-app demo"

[lib]
crate-type = ["cdylib", "rlib"]
path = "basic.rs"

[dependencies]
uni-app = { path = ".." }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
